<resources>

    <string name="app_name">Smart Gasstation</string>

    <string name="main_menu_add_refuel">Записать заправку</string>
    <string name="main_menu_clear_refuel_history">Очистить историю заправок</string>

    <string name="main_activity_history">История заправок</string>
    <string name="main_activity_consumption">Расход топлива: </string>
    <string name="main_activity_files_btn">Работа с файлами</string>

    <string name="add_refuel_activity_add_refuel_btn">Записать заправку</string>
    <string name="add_refuel_activity_find_best_refuel_tv">Расчёт лучшей заправки</string>
    <string name="add_refuel_activity_find_best_refuel_btn">Найти лучшую заправку</string>
    <string name="add_refuel_activity_fuel_consumption_et">Расход топлива (л/100км)</string>
    <string name="add_refuel_activity_odometer_et">Текущий пробег (км)</string>
    <string name="add_refuel_activity_fuel_amount_et">Количество топлива (л)</string>
    <string name="add_refuel_activity_fuel_type_et">Тип топлива (АИ-95, АИ-92, ДТ…)</string>
    <string name="add_refuel_activity_return_btn">Назад</string>

    <string name="main_recycler_view_fuel_amount">Топливо (л): </string>
    <string name="main_recycler_view_odometer">Пробег (км): </string>
    <string name="main_recycler_view_date">Дата: </string>
    <string name="file_load_xls">Загрузить XLS</string>
    <string name="file_save_pdf">Сохранить PDF</string>
    <string name="file_save_xls">Сохранить XLS</string>
    <string name="file_load_txt">Загрузить TXT</string>
    <string name="file_save_txt">Сохранить TXT</string>
    <string name="main_activity_thread_btn">Thread</string>
    <string name="main_activity_coroutine_btn">Coroutine</string>
</resources>