<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_fuel_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_recycler_view_fuel_amount"
        android:hint="@string/main_recycler_view_fuel_amount"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_odometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/main_recycler_view_odometer"
        android:hint="@string/main_recycler_view_odometer"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_recycler_view_date"
        android:hint="@string/main_recycler_view_date"
        android:layout_marginTop="4dp"
        android:textSize="11sp" />

</LinearLayout>