<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.smartgasstation.presentation.viewModels.AddRefuelVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".presentation.AddRefuelFragment">

        <EditText
            android:id="@+id/fuelTypeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_refuel_activity_fuel_type_et"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fuelAmountInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/add_refuel_activity_fuel_amount_et"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fuelTypeInput" />

        <EditText
            android:id="@+id/odometerInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/add_refuel_activity_odometer_et"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fuelAmountInput" />

        <EditText
            android:id="@+id/fuelConsumptionInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/add_refuel_activity_fuel_consumption_et"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@{viewModel.avgConsumptionText}"
            tools:text="10.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/odometerInput" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_refuel_activity_find_best_refuel_btn"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fuelConsumptionInput" />

        <Button
            android:id="@+id/cancelSearchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Отменить"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/calculateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:background="#f0f0f0"
            android:text="@string/add_refuel_activity_find_best_refuel_tv"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancelSearchButton" />

        <Button
            android:id="@+id/refuelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_refuel_activity_add_refuel_btn"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultText" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_refuel_activity_return_btn"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refuelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
